# Projet_Pour_CV

./: README.md
Projet_QCM/: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  ServeurSocket.cpp  ServeurSocket.h  TraitementImage.cpp  TraitementImage.h  main.cpp
codeShifumi/: codeShifumi.cpp  codeShifumi.h
